﻿Legend:
! Breaking change
* Compatible change
- Bugfix
+ New feature
===============================================================================

~~~~~~~~~
! v9.0.0:
~~~~~~~~~

! General changes:
===================
! All methods with a ParallelConfig/AsyncConfig/TaskConfig parameter (breaking only on Windows .NET 5.0 and below):
  ! When AsyncConfigBase.MaxDegreeOfParallelism is zero or less, then the maximum degree of parallelism was
    determined by Environment.ProcessorCount, which doesn't respect the CPU affinity for the current process if the
    targeted platform is below .NET 6.0. From now on the CPU affinity is respected on all platform targets.
    See also: https://learn.microsoft.com/en-us/dotnet/core/compatibility/core-libraries/6.0/environment-processorcount-on-windows

! KGySoft.Drawing.Imaging namespace
===================================
! IReadableBitmapData interface: (breaking only if you implement it, which is normally not needed)
  ! New GetColorIndex/ReadRaw<T> methods
! IWritableBitmapData interface: (breaking only if you implement it, which is normally not needed)
  ! New SetColorIndex/WriteRaw<T> methods
! BitmapDataFactory class:
  ! CreateBitmapData overloads with T[] or Array2D<T> buffer and KnownPixelFormat parameters:
    ! The stride must be a multiple of the pixel size of the specified pixel format as well, not just the element
      size of the underlying array type. Unmanaged buffers, buffers of T[,], and custom pixel formats are not
      affected by this new constraint.
  * Self-allocating CreateBitmapData overloads: By default, no longer using array pooling if the natural element
    type of the underlying array is other than byte. This can be adjusted by the new PoolingStrategy property.
  + New PoolingStrategy property
- BitmapDataExtensions class:
  - Cloning a bitmap with a custom pixel format may have failed if the source bitmap was so huge that the cloned